Avoiding the main content to expand too much

--- a/src/last.fm/popup.css
+++ b/src/last.fm/popup.css
@@ -1,5 +1,6 @@
 main{
-  margin: 10px;
+  box-sizing: border-box;
+  padding: 10px;
 }
 
 h2{
